fixed spacing for plant_detail pages

--- a/guide/static/css/guide.css
+++ b/guide/static/css/guide.css
@@ -383,6 +383,7 @@ ul li ul li {
 .detail_title {
     padding-bottom: 20px;
     width: 320px;
+    margin-left: 10px;
     font-family: cursive;
     background-color: rgba(240, 230, 140, 0);
 }
@@ -405,6 +406,7 @@ ul li ul li {
 
 .detail_names {
     width: 225px;
+    margin-left: 410px;
     text-align: left;
 }
 
@@ -431,19 +433,35 @@ ul li ul li {
 
 /** ABOUT PAGE **/
 
+#about_div {
+
+}
+
 #about_title_div {
-    margin: 30px;
-    border-style: groove;
-    border-color: rgb(92, 60, 18);
-    border-radius: 15px;
+
+    margin-top: 75px;
     padding-bottom: 10px;
     width: 500px;
-    margin-left: 230px;
+    margin-bottom: 30px;
+}
+
+#about_title_div h2 {
+
 }
 
 #about_text_div {
+    background-color: khaki;
+    padding: 40px;
+    margin-top: 40px;
+    border-radius: 15px;
+    border-style: groove;
+    border-color: rgb(92, 60, 18);
     width: 600px;
-    margin-left: 180px;
+}
+
+#about_text_div p {
+    background-color: khaki;
+    width: 500px;
 }
 
 
